# DACPP-OpenSource

./: .gitignore  README.md  findings.md  progress.md  task_plan.md
clang/tools/translator/: CMakeLists.txt  README.md  bench_local.sh  bench_mpi_apps.sh  bench_mpi_only_requested.py  bench_mpi_profile_segments.py  bench_stencil_mpi.sh  bench_stencil_wave_sweep.sh  bench_wave_mpi.sh  dacpp.sh  env.sh  findings.md  progress.md  setenv.sh  task_plan.md  test_local.sh  test_mpi.sh  translator.cpp
clang/tools/translator/archive/: README.md
clang/tools/translator/dacppLib/include/: ReconTensor copy.h  ReconTensor-final.h  ReconTensor.h  dac_Reduction.h  exception.h
clang/tools/translator/docs/: README.md  image_adjustment_fix.md  macos_local_sycl_setup.md  mpi_binding_fix_analysis.md  mpi_current_translation_logic.md  mpi_implementation_and_setup.md  mpi_nonstencil_translation.md  mpi_region_progress.md  mpi_semantic_broadcast_analysis.md  mpi_test_report.md  plan.md  stencil_handoff_readme.md  translation_paths_overview.md
clang/tools/translator/docs/benchmarks/: mpi_efficiency_benchmark_summary.md  mpi_sycl_efficiency_benchmark_2026-05-06.md  or_followup_phase4_benchmark_2026-05-08.md
clang/tools/translator/docs/bugs_fix_log/: mpi_halo_sibling_risk_analysis.md  mpi_param_mode_inference_fix.md
clang/tools/translator/docs/local_translator/: buffer_region_device_residency.md
clang/tools/translator/docs/mpi_translator/: mpi_32node_top10_optimization_plan_2026-05-21.md  mpi_broadcast_analysis_report.md  mpi_current_translation_logic.md  mpi_halo_item_reach_filtering.md  mpi_optimization_complexity.md  mpi_performance_optimization_todolist.md  mpi_region_alignment_with_wrapper_optimizations.md  mpi_stencil_implementation.md  mpi_stencil_logic_2026-05-06.md  mpi_stencil_phase1_status.md  mpi_stencil_status.md  mpi_translator_current_status.md  mpi_wrapper_consistency_and_regions.md  mpi_wrapper_performance_optimization_implementation.md  mpi_wrapper_redundancy_elimination_report.md  operator_resident_access_model_for_accesspattern_readers.md  operator_resident_communication_model_2026-05-06.md  operator_resident_progress_2026-05-06.md  phase_4_6_a0_measurement_baseline_2026-05-09.md  phase_4_6_optimization_plan_2026-05-09.md  phase_c_halo_plan_2026-05-04.md  phase_c_impl_note_2026-05-03.md  phase_c_routes_materialize_2026-05-04.md  row_payload_materialization_optimization_todo_2026-05-11.md  shell_derived_partition_implementation_plan_2026-05-07.md  wave_specialization_split_plan_2026-05-06.md
clang/tools/translator/dpcppLib/backup/: ParameterGeneration_old.h
clang/tools/translator/dpcppLib/include/: DataReconstructor.h  DataReconstructor.new.h  DataReconstructor1.h  DeviceManager.h  MPIPlanner.h  MPIRegionRuntime.h  ParameterGeneration.h  utils.h
clang/tools/translator/example/DFT/: DFT.MPI_StandardSycl_test.cpp  DFT.dac.cpp
clang/tools/translator/example/decay/: decay.dac.cpp  decay_chain.MPI_StandardSycl_test.cpp
clang/tools/translator/example/gradientSum/: gradientSum.MPI_StandardSycl_test.cpp  gradientSum.dac.cpp
clang/tools/translator/example/liuliang/: liuliang.MPI_StandardSycl_test.cpp  liuliang.dac.cpp
clang/tools/translator/example/mandel/: mandel.MPI_StandardSycl_test.cpp  mandel.dac.cpp
clang/tools/translator/example/matMul/: matMul.MPI_StandardSycl_test.cpp  matMul.dac.cpp
clang/tools/translator/example/mdp/: mdp.MPI_StandardSycl_test.cpp  mdp.dac.cpp
clang/tools/translator/example/monteCarloOption/: monteCarloOption.MPI_StandSycl.cpp  monteCarloOption.dac.cpp
clang/tools/translator/example/stencil/: stencil.MPI_StandardSycl_test.cpp  stencil.dac.cpp
clang/tools/translator/example/waveEquation/: waveEquation.MPI_StandardSycl_test.cpp  waveEquation.dac.cpp
clang/tools/translator/parser/include/: ASTParse.h  Calc.h  Dacfor.h  DacppStructure.h  Param.h
clang/tools/translator/parser/lib/: ASTParse.cpp  Calc.cpp  Dacfor.cpp  DacppStructure.cpp  Param.cpp  Shell.cpp
clang/tools/translator/rewriter/backup/: Rewriter1.h  Rewriter_Buffer_202506.cpp  Rewriter_Usm1.cpp  usm_template_old.cpp  usm_template_old.h
clang/tools/translator/rewriter/include/: Multiple_template.h  Rewriter.h  Rewriter_MPI_Common.h  Rewriter_MPI_OperatorResident.h  Rewriter_MPI_Plan.h  Rewriter_MPI_Stencil_Common.h  buffer_template.h  buffer_template_new.h  dacInfo.h  mpi_template.h  universal_template.h  usm_template.h  usm_time_template.h
clang/tools/translator/rewriter/lib/: Multiple_template.cpp  Rewriter_Buffer.cpp  Rewriter_Buffer_new.cpp  Rewriter_MPI.cpp  Rewriter_MPI_Stencil.cpp  Rewriter_Multiple.cpp  Rewriter_Soft.cpp  Rewriter_Usm.cpp  Rewriter_Usm_time.cpp  buffer_template.cpp  buffer_template_new.cpp  mpi_template.cpp  sub_template.cpp  universal_template.cpp  usm_template.cpp  usm_time_template.cpp
clang/tools/translator/single_overlay/: translator.cpp
clang/tools/translator/single_overlay/dacppLib/: TensorException.hpp  Tensor_Sycl.hpp
clang/tools/translator/tests/: CMakeLists.txt  auto_test.sh  mpi_sycl_baseline.cpp  new_auto_test.sh  parallel_decay_data.txt  pro_auto_test.sh  translated_sycl_runtime_dependencies.md  translated_sycl_runtime_dependencies_cn.md
clang/tools/translator/tests/DFT1.0/: DFT.MPI_StandardSycl.cpp  DFT.StandardSycl.cpp  DFT.dac.cpp  DFT.dac_sycl.cpp  DFT.dac_sycl_buffer.cpp  DFT.dac_sycl_usm.cpp  DFT.large_StandardSycl.cpp  DFT.large_dac.cpp  DFT.large_serial.cpp  DFT.serial.cpp  a  mpi_expect.txt  result.out
clang/tools/translator/tests/FOuLa1.0/: FOuLa.MPI_StandardSycl.cpp  FOuLa.StandardSycl.cpp  FOuLa.dac.cpp  FOuLa.dac_sycl.cpp  FOuLa.dac_sycl_buffer.cpp  FOuLa.dac_sycl_usm.cpp  FOuLa.large_StandardSycl.cpp  FOuLa.large_dac.cpp  mpi_expect.txt  result.out
clang/tools/translator/tests/MDP1.0/: mdp.MPI_StandardSycl.cpp  mdp.StandardSycl.cpp  mdp.dac.cpp  mdp.dac_sycl_buffer.cpp  mdp.dac_sycl_usm.cpp  mdp.large_StandardSycl.cpp  mdp.large_dac.cpp  mpi_expect.txt  result.out
clang/tools/translator/tests/decay1.0/: a  (+16 more)
clang/tools/translator/tmp_matmul2048/: matmul2048.dac.cpp  matmul2048.dac_sycl_buffer.cpp
(+465 files in other folders)
